Сверстали блок с портфолио

--- a/index.html
+++ b/index.html
@@ -47,5 +47,62 @@
             </div>
         </div>
     </header>
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="section-heading">Последние проекты</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="images/portfolio/image 1.jpg" alt="Мобильное приложение" class="card-img">
+                    <div class="card-text-wrapper">
+                        <h3 class="card-title">Мобильное приложение</h3>
+                        <ul class="tags">
+                        <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+                        <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+                        <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+                        <li class="tags-item"><a href="#" class="tag">Git</a></li>
+                        <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+                        </ul>
+                        <p class="card-text">
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                        <div class="card-buttons">
+                        <a href="" class="card-button">
+                            <img src="images/Icons/code.svg" alt="code Icons" class="card-button-icon">
+                            <span class="card-button-text">Код</span>
+                        </a>
+                        <a href="" class="card-button">
+                            <img src="images/Icons/check.svg" alt="check icon" class="card-button-icon">
+                            <span class="card-button-text">Демо</span>
+                        </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/portfolio/image 2.jpg" alt="Мобильное приложение" class="card-img">
+                    <div class="card-text-wrapper">
+                        <h3 class="card-title">Одностраничный промо-сайт</h3>
+                        <ul class="tags">
+                        <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+                        <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+                        </ul>
+                        <p class="card-text">
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                        <div class="card-buttons">
+                        <a href="" class="card-button">
+                            <img src="images/Icons/code.svg" alt="code Icons" class="card-button-icon">
+                            <span class="card-button-text">Код</span>
+                        </a>
+                        <a href="" class="card-button">
+                            <img src="images/Icons/check.svg" alt="check icon" class="card-button-icon">
+                            <span class="card-button-text">Демо</span>
+                        </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
 </body>
 </html>
