Сверстали блок про автора и форму обратной связи

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/portfolio/image 2.jpg" alt="Мобильное приложение" class="card-img">
+                    <img src="images/portfolio/image 2.jpg" alt="Одностраничный промо-сайт" class="card-img">
                     <div class="card-text-wrapper">
                         <h3 class="card-title">Одностраничный промо-сайт</h3>
                         <ul class="tags">
@@ -102,7 +102,57 @@
                 </div>
             </div>
         </div>
-        
+    </section>
+    <section class="developer container">
+        <img src="images/developer.png" alt="Света Жамьянова" class="developer-photo">
+        <div class="developer-about">
+            <span class="developer-hello">Рада вас видеть</span>
+            <h2 class="developer-title">Я Света Жамьянова</h2>
+            <p class="developer-text">
+                Я разрабатываю сайты для людей и компаний. Делаю всё сама: составляю прототип, дизайн-макет, пишу код.
+            </p>
+            <span class="motto">Код, Дизайн, Обучение</span>
+            <p class="developer-text">Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: 
+                Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+            <img src="images/sign.png" alt="Подпись: Света Жамьянова" class="developer-sign">    
+        </div>
+    </section>
+    <section class="skills container">
+        <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+        <ul class="tags">
+            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+            <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+            <li class="tags-item"><a href="#" class="tag">Wordpress</a></li>
+            <li class="tags-item"><a href="#" class="tag">npm</a></li>
+            <li class="tags-item"><a href="#" class="tag">Reactjs</a></li>
+            <li class="tags-item"><a href="#" class="tag">Nextjs</a></li>
+            <li class="tags-item"><a href="#" class="tag">UI Design</a></li>
+            <li class="tags-item"><a href="#" class="tag">SASS</a></li>
+            </ul>
+    </section>
+    <section class="feedback form-container">
+        <h2 class="feedback-title">Готова обсудить проект...</h2>
+        <form action="#" class="form">
+            <div class="input-group">
+                <label for="userName" class="input-label">Имя</label>
+                <input id="userName" type="text" class="input">
+            </div>
+            <div class="input-group">
+                <label for="userEmail" class="input-label">Email</label>
+                <input id="userEmail" type="text" class="input">
+            </div>
+            <div class="input-group">
+                <label for="userMessage" class="input-label">Сообщение</label>
+                <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
+            </div>
+            <div class="button-group">
+                <button type="submit" class="submit-button">
+                    <img src="images/Icons/send.svg" alt="send-icon" class="cv-icon">
+                    <span class="cv-text">Отправить</span>
+                </button>
+            </div>
+        </form>
     </section>
 </body>
 </html>
